Aero: Use CheckBox/RadioButton Padding property and fix focus visual

--- a/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
@@ -581,14 +581,12 @@
     <Setter Property="Control.Template">
       <Setter.Value>
         <ControlTemplate>
-          <Border Margin="{Binding AdornedElement.Padding, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Adorner}}}">
-            <Rectangle Margin="15,1,1,2"
-                       SnapsToDevicePixels="True"
-                       Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
-                       StrokeThickness="1"
-                       StrokeDashArray="1 1"
-                       StrokeDashOffset="1.5"/>
-          </Border>
+          <Rectangle Margin="15,1,1,2"
+                     SnapsToDevicePixels="True"
+                     Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                     StrokeThickness="1"
+                     StrokeDashArray="1 1"
+                     StrokeDashOffset="1.5"/>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
@@ -603,11 +601,12 @@
   </Geometry>
 
   <Style TargetType="{x:Type CheckBox}">
-    <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkEmptyFocusVisual}"/>
+    <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>
     <Setter Property="Background" Value="{StaticResource CheckBox.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource CheckBox.Border.Normal}"/>
     <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
     <Setter Property="BorderThickness" Value="1"/>
+    <Setter Property="Padding" Value="3,2,2,3"/>
     <Setter Property="HorizontalAlignment" Value="Left"/>
     <Setter Property="HorizontalContentAlignment" Value="Left"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -716,16 +715,16 @@
             <ContentPresenter x:Name="Content"
                               RecognizesAccessKey="True"
                               Grid.Column="1"
-                              Margin="0"
+                              Margin="{TemplateBinding Padding}"
                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                               Focusable="False"/>
           </Grid>
           <ControlTemplate.Triggers>
-            <Trigger Property="HasContent" Value="True">
-              <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>
-              <Setter TargetName="Content" Property="Margin" Value="3,2,2,3"/>
+            <Trigger Property="HasContent" Value="False">
+              <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkEmptyFocusVisual}"/>
+              <Setter Property="Padding" Value="0"/>
             </Trigger>
             <Trigger Property="TextOptions.TextFormattingMode" Value="Display">
               <Setter TargetName="Border" Property="Margin" Value="0,-1,0,0"/>
@@ -753,11 +752,12 @@
   <!-- RadioButton ========================================================= -->
 
   <Style TargetType="{x:Type RadioButton}">
-    <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkEmptyFocusVisual}"/>
+    <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>
     <Setter Property="Background" Value="{StaticResource CheckBox.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource CheckBox.Border.Normal}"/>
     <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
     <Setter Property="BorderThickness" Value="1"/>
+    <Setter Property="Padding" Value="3,2,2,3"/>
     <Setter Property="HorizontalAlignment" Value="Left"/>
     <Setter Property="HorizontalContentAlignment" Value="Left"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -840,15 +840,16 @@
             <ContentPresenter x:Name="Content"
                               RecognizesAccessKey="True"
                               Grid.Column="1"
+                              Margin="{TemplateBinding Padding}"
                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                               Focusable="False"/>
           </Grid>
           <ControlTemplate.Triggers>
-            <Trigger Property="HasContent" Value="True">
-              <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>
-              <Setter TargetName="Content" Property="Margin" Value="3,2,2,3"/>
+            <Trigger Property="HasContent" Value="False">
+              <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkEmptyFocusVisual}"/>
+              <Setter Property="Padding" Value="0"/>
             </Trigger>
             <Trigger Property="TextOptions.TextFormattingMode" Value="Display">
               <Setter TargetName="Border" Property="Margin" Value="0,-1,0,0"/>
