--- a/Source/SampleApp/MainWindow.xaml
+++ b/Source/SampleApp/MainWindow.xaml
@@ -8,6 +8,7 @@
         xmlns:sampleApp="clr-namespace:SampleApp"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance {x:Type sampleApp:MainWindow}}"
+        TextOptions.TextFormattingMode="Display"
         Title="MainWindow" Height="350" Width="900">
   <DockPanel>
     <Menu DockPanel.Dock="Top">
@@ -35,6 +36,7 @@
         <Button Content="Button" Margin="5" HorizontalAlignment="Left"/>
         <sampleLib:SampleControl Margin="5" HorizontalAlignment="Left"/>
         <sampleExtLib:SampleExtControl Margin="5" HorizontalAlignment="Left"/>
+        <TextBox/>
       </StackPanel>
     </Grid>
   </DockPanel>
