--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
@@ -1334,7 +1334,6 @@
   <SolidColorBrush x:Key="Header.Border.Hot" Color="#FF26A0DA" po:Freeze="True"/>
   <SolidColorBrush x:Key="Header.Border.Pressed" Color="#FF26A0DA" po:Freeze="True"/>
 
-  <SolidColorBrush x:Key="Explorer.ListView.Item.Background.Normal" Color="Transparent" po:Freeze="True"/>
   <SolidColorBrush x:Key="Explorer.ListView.Item.Background.Hot" Color="#66E3F0FF" po:Freeze="True"/>
   <SolidColorBrush x:Key="Explorer.ListView.Item.Border.Hot" Color="#AD98C4FB" po:Freeze="True"/>
   <SolidColorBrush x:Key="Explorer.ListView.Item.Background.Selected" Color="#BFD2E6FF" po:Freeze="True"/>
@@ -2503,8 +2502,8 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ContextMenu}">
           <aero10:SystemDropShadowChrome x:Name="Shdw"
-                                        Color="Transparent"
-                                        SnapsToDevicePixels="True">
+                                         Color="Transparent"
+                                         SnapsToDevicePixels="True">
             <Border x:Name="ContextMenuBorder"
                     Background="{TemplateBinding Background}"
                     BorderBrush="{TemplateBinding BorderBrush}"
@@ -3030,37 +3029,22 @@
 
   <!-- TreeView ============================================================ -->
 
-  <PathGeometry x:Key="TreeArrow">
-    <PathGeometry.Figures>
-      <PathFigureCollection>
-        <PathFigure IsFilled="True" StartPoint="0 0" IsClosed="True">
-          <PathFigure.Segments>
-            <PathSegmentCollection>
-              <LineSegment Point="0 6"/>
-              <LineSegment Point="6 0"/>
-            </PathSegmentCollection>
-          </PathFigure.Segments>
-        </PathFigure>
-      </PathFigureCollection>
-    </PathGeometry.Figures>
-  </PathGeometry>
-
-  <DrawingImage x:Key="TreeViewGlyphMinus">
-    <DrawingImage.Drawing>
-      <DrawingGroup>
-        <GeometryDrawing Brush="#FFA3A3A3" Geometry="M0,0 9,0 9,9 0,9 z"/>
-        <GeometryDrawing Brush="#FFE2E2E2" Geometry="M1,1 8,1 8,8 1,8 z"/>
-        <GeometryDrawing Brush="#FF333333" Geometry="M2,4 7,4 7,5 2,5 z"/>
-      </DrawingGroup>
-    </DrawingImage.Drawing>
-  </DrawingImage>
-
-  <DrawingImage x:Key="TreeViewGlyphPlus">
+  <DrawingImage x:Key="TreeView.Glyph.Plus">
     <DrawingImage.Drawing>
       <DrawingGroup>
         <GeometryDrawing Brush="#FFA3A3A3" Geometry="M0,0 9,0 9,9 0,9 z"/>
         <GeometryDrawing Brush="#FFE2E2E2" Geometry="M1,1 8,1 8,8 1,8 z"/>
         <GeometryDrawing Brush="#FF333333" Geometry="M2,4 4,4 4,2 5,2 5,4 7,4 7,5 5,5 5,7 4,7 4,5 2,5 z"/>
+      </DrawingGroup>
+    </DrawingImage.Drawing>
+  </DrawingImage>
+
+  <DrawingImage x:Key="TreeView.Glyph.Minus">
+    <DrawingImage.Drawing>
+      <DrawingGroup>
+        <GeometryDrawing Brush="#FFA3A3A3" Geometry="M0,0 9,0 9,9 0,9 z"/>
+        <GeometryDrawing Brush="#FFE2E2E2" Geometry="M1,1 8,1 8,8 1,8 z"/>
+        <GeometryDrawing Brush="#FF333333" Geometry="M2,4 7,4 7,5 2,5 z"/>
       </DrawingGroup>
     </DrawingImage.Drawing>
   </DrawingImage>
@@ -3073,12 +3057,12 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ToggleButton}">
           <Border Background="Transparent">
-            <Image x:Name="Glyph" Source="{StaticResource TreeViewGlyphPlus}"
+            <Image x:Name="Glyph" Source="{StaticResource TreeView.Glyph.Plus}"
                    Width="9" Height="9" Margin="0,3,0,0"/>
           </Border>
           <ControlTemplate.Triggers>
             <Trigger Property="IsChecked" Value="True">
-              <Setter TargetName="Glyph" Property="Source" Value="{StaticResource TreeViewGlyphMinus}"/>
+              <Setter TargetName="Glyph" Property="Source" Value="{StaticResource TreeView.Glyph.Minus}"/>
             </Trigger>
           </ControlTemplate.Triggers>
         </ControlTemplate>
