ThemeBrowser: Add background and line join/cap options to image tracing

--- a/Source/ThemeBrowser/PreviewImageDialog.xaml
+++ b/Source/ThemeBrowser/PreviewImageDialog.xaml
@@ -10,7 +10,8 @@
         UseLayoutRounding="True"
         TextOptions.TextFormattingMode="Display"
         Width="500"
-        Height="400">
+        Height="400"
+        WindowStartupLocation="CenterOwner">
   <Window.Resources>
     <Style TargetType="{x:Type TextBlock}">
       <Setter Property="Margin" Value="3"/>
