--- a/Source/ThemeBrowser/TraceImageDialog.xaml
+++ b/Source/ThemeBrowser/TraceImageDialog.xaml
@@ -10,16 +10,8 @@
         Title="Trace Image"
         UseLayoutRounding="True"
         Width="1280"
-        Height="720">
-  <Window.Resources>
-    <Style x:Key="ColorOverlayBox" TargetType="TextBlock">
-      <Setter Property="HorizontalAlignment" Value="Left"/>
-      <Setter Property="VerticalAlignment" Value="Top"/>
-      <Setter Property="Margin" Value="0"/>
-      <Setter Property="Background" Value="#33FFFFFF"/>
-      <Setter Property="FontFamily" Value="Consolas"/>
-    </Style>
-  </Window.Resources>
+        Height="720"
+        WindowStartupLocation="CenterOwner">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto"/>
@@ -41,6 +33,7 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal">
         <TextBlock Margin="3">
@@ -51,8 +44,12 @@
                 IsSnapToTickEnabled="True" TickFrequency="1" Margin="0,3,3,3"/>
       </StackPanel>
 
-      <TextBlock Grid.Row="1" Grid.Column="0" Margin="3" Text="Source"/>
+      <TextBlock Grid.Row="1" Grid.Column="0" Margin="3" Text="Source Rect" VerticalAlignment="Center"/>
       <TextBox Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding SourceRect}"/>
+
+      <TextBlock Grid.Row="2" Grid.Column="0" Margin="3" Text="Pattern" VerticalAlignment="Center"/>
+      <ComboBox Grid.Row="2" Grid.Column="1" Margin="3" ItemsSource="{Binding BackgroundPatterns}"
+                DisplayMemberPath="Name" SelectedItem="{Binding SelectedBackgroundPattern}"/>
     </Grid>
     <Grid Grid.Row="1" Grid.Column="0" Background="#939393">
       <ScrollViewer HorizontalScrollBarVisibility="Visible"
@@ -61,15 +58,15 @@
           <Border.Effect>
             <DropShadowEffect Color="#33999999" Direction="0" BlurRadius="8" ShadowDepth="0"/>
           </Border.Effect>
-          <Border Background="{StaticResource CheckeredBrush}"
+          <Border Background="{Binding SelectedBackgroundPattern.Brush}"
                   HorizontalAlignment="Center"
                   VerticalAlignment="Center"
                   SnapsToDevicePixels="True"
                   UseLayoutRounding="True">
-            <Image x:Name="image" Source="{Binding SourceBitmap}" HorizontalAlignment="Left"
+            <Image Source="{Binding SourceBitmap}" HorizontalAlignment="Left"
                    Stretch="Uniform" RenderOptions.BitmapScalingMode="NearestNeighbor">
               <i:Interaction.Behaviors>
-                <local:ImageColorPickerBehavior x:Name="srcImageColorPicker"/>
+                <local:ImageColorPickerBehavior/>
               </i:Interaction.Behaviors>
               <Image.Width>
                 <MultiBinding Converter="{StaticResource DoubleMultiplyConverter}">
@@ -111,10 +108,37 @@
       <CheckBox Grid.Row="1" Grid.Column="3" Margin="3" IsChecked="{Binding RenderAliased}"/>
 
       <TextBlock Grid.Row="2" Grid.Column="0" Margin="3" Text="Margin" VerticalAlignment="Center"/>
-      <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="3" Text="{Binding PathMargin}"/>
+      <Grid Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="3*"/>
+          <ColumnDefinition Width="1*"/>
+          <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Column="0" Margin="3" Text="{Binding PathMargin}"/>
+        <ComboBox Grid.Column="1" Margin="0,3,3,3" SelectedValue="{Binding PathStrokeLineCap}">
+          <PenLineCap>Flat</PenLineCap>
+          <PenLineCap>Square</PenLineCap>
+          <PenLineCap>Round</PenLineCap>
+          <PenLineCap>Triangle</PenLineCap>
+        </ComboBox>
+        <ComboBox Grid.Column="2" Margin="0,3,3,3" SelectedValue="{Binding PathStrokeLineJoin}">
+          <PenLineJoin>Miter</PenLineJoin>
+          <PenLineJoin>Bevel</PenLineJoin>
+          <PenLineJoin>Round</PenLineJoin>
+        </ComboBox>
+      </Grid>
 
       <TextBlock Grid.Row="3" Grid.Column="0" Margin="3" Text="Fill" VerticalAlignment="Center"/>
-      <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Margin="3" Text="{Binding PathFill}"/>
+      <Grid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="3*"/>
+          <ColumnDefinition Width="3*"/>
+          <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Column="0" Margin="3" Text="{Binding PathFill}"/>
+        <TextBox Grid.Column="1" Margin="0,3,3,3" Text="{Binding PathStroke}"/>
+        <TextBox Grid.Column="2" Margin="0,3,3,3" Text="{Binding PathStrokeThickness}"/>
+      </Grid>
 
       <TextBlock Grid.Row="4" Grid.Column="0" Margin="3" Text="Rendered" VerticalAlignment="Center"/>
       <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Margin="3" Text="{Binding PathRenderedData}" IsReadOnly="True"/>
@@ -126,7 +150,7 @@
           <Border.Effect>
             <DropShadowEffect Color="#33999999" Direction="0" BlurRadius="8" ShadowDepth="0"/>
           </Border.Effect>
-          <Border Background="{StaticResource CheckeredBrush}"
+          <Border Background="{Binding SelectedBackgroundPattern.Brush}"
                   HorizontalAlignment="Center"
                   VerticalAlignment="Center"
                   SnapsToDevicePixels="True"
@@ -136,7 +160,12 @@
                     Data="{Binding PathGeometry}"
                     Margin="{Binding PathMargin}"
                     Fill="{Binding PathFill}"
-                    Stretch="None"/>
+                    Stroke="{Binding PathStroke}"
+                    StrokeThickness="{Binding PathStrokeThickness}"
+                    Stretch="None"
+                    StrokeLineJoin="{Binding PathStrokeLineJoin}"
+                    StrokeStartLineCap="{Binding PathStrokeLineCap}"
+                    StrokeEndLineCap="{Binding PathStrokeLineCap}"/>
             </Border>
           </Border>
         </Border>
@@ -152,7 +181,7 @@
       <TextBlock Margin="3" Text=" Zoom:"/>
       <Slider x:Name="ComparisonZoomSlider" Value="1" Minimum="1" Maximum="20" Width="100"
                 IsSnapToTickEnabled="True" TickFrequency="1" Margin="0,3,3,3"/>
-      <CheckBox IsChecked="{Binding ShowTracedFlag}" Content="Show Traced"/>
+      <CheckBox IsChecked="{Binding ShowDiffFlag}" Content="Show Diff"/>
     </StackPanel>
     <Grid Grid.Row="1" Grid.Column="4" Background="#939393">
       <ScrollViewer HorizontalScrollBarVisibility="Visible"
@@ -161,7 +190,7 @@
           <Border.Effect>
             <DropShadowEffect Color="#33999999" Direction="0" BlurRadius="8" ShadowDepth="0"/>
           </Border.Effect>
-          <Border Background="{StaticResource CheckeredBrush}"
+          <Border Background="{Binding SelectedBackgroundPattern.Brush}"
                   HorizontalAlignment="Center"
                   VerticalAlignment="Center"
                   SnapsToDevicePixels="True"
@@ -169,7 +198,7 @@
             <Image Source="{Binding DiffBitmap}" HorizontalAlignment="Left"
                    Stretch="Uniform" RenderOptions.BitmapScalingMode="NearestNeighbor">
               <i:Interaction.Behaviors>
-                <local:ImageColorPickerBehavior x:Name="diffImageColorPicker"/>
+                <local:ImageColorPickerBehavior/>
               </i:Interaction.Behaviors>
               <Image.Width>
                 <MultiBinding Converter="{StaticResource DoubleMultiplyConverter}">
