Aero10: Hide Border in favor of TodayBorder in Calendar for the Today cell

--- a/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
@@ -7356,6 +7356,7 @@
           <ControlTemplate.Triggers>
             <Trigger Property="IsToday" Value="True">
               <Setter TargetName="TodayBorder" Property="Visibility" Value="Visible"/>
+              <Setter TargetName="Border" Property="BorderBrush" Value="Transparent"/>
             </Trigger>
             <Trigger Property="IsBlackedOut" Value="True">
               <Setter TargetName="Blackout" Property="Visibility" Value="Visible"/>
