--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
@@ -1165,13 +1165,13 @@
     </Setter>
     <Style.Triggers>
       <Trigger Property="IsEnabled" Value="False">
-        <Setter Property="TextElement.Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
       </Trigger>
       <MultiTrigger>
         <MultiTrigger.Conditions>
           <Condition Property="IsSelected" Value="True"/>
           <Condition Property="IsMouseOver" Value="False"/>
-          <Condition Property="UIElement.IsKeyboardFocused" Value="True"/>
+          <Condition Property="IsKeyboardFocused" Value="True"/>
         </MultiTrigger.Conditions>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
         <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
@@ -1181,7 +1181,7 @@
         <MultiTrigger.Conditions>
           <Condition Property="IsSelected" Value="False"/>
           <Condition Property="IsMouseOver" Value="False"/>
-          <Condition Property="UIElement.IsKeyboardFocused" Value="True"/>
+          <Condition Property="IsKeyboardFocused" Value="True"/>
         </MultiTrigger.Conditions>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
         <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
