--- a/Source/ThemeBrowser/TraceImageDialog.xaml
+++ b/Source/ThemeBrowser/TraceImageDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ThemeBrowser"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance {x:Type local:TraceImageDialog}}"
         Title="Trace Image"
