--- a/Source/ThemePreviewer/MainWindow.xaml
+++ b/Source/ThemePreviewer/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:ThemePreviewer"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:samples="clr-namespace:ThemePreviewer.Samples"
         xmlns:controls="clr-namespace:ThemePreviewer.Controls"
         mc:Ignorable="d"
